<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TodosFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.todoapp.viewmodel.todo.ToDoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:drawableStart="@drawable/va_edit_note_24"
                android:drawablePadding="8dp"
                android:hint="@string/enter_todo_item"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/todo_delete_all_button"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:onClick="@{() -> viewModel.deleteAllTodos()}"
            android:text="@string/delete_all_todos"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/todo_save_button"
            app:layout_constraintTop_toBottomOf="@id/todo_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/todo_save_button"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addTodo()}"
            android:text="@string/save_todo"
            app:layout_constraintEnd_toEndOf="@id/todo_input_layout"
            app:layout_constraintTop_toBottomOf="@id/todo_input_layout" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@color/todo_item_divider"
            app:layout_constraintTop_toBottomOf="@id/todo_save_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todos_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/no_todos_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_todo_tasks"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>